<resources>
    <string name="app_name">健食记</string>

    <!--欢迎页-->
    <string name="slogan_prev">讲究你的每一餐</string>
    <string name="slogan_next">因为健身从不将就</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_index">食谱</string>
    <string name="tab_me">我</string>
    <string name="tab_plan">计划</string>
    <string name="tab_knowledge">指南</string>

    <!--首页-->
    <string name="check_category">查看菜谱分类</string>
    <string name="advice">意见反馈</string>

    <!--分类-->
    <string name="category">分类</string>
    <string name="filter">筛选</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="feature">特色</string>
    <string name="time">用餐时间</string>
    <string name="perfect">完美</string>
    <string name="hp">高蛋白</string>
    <string name="lk">低卡</string>
    <string name="lf">低脂</string>
    <string name="breakfast">早餐</string>
    <string name="breakfast_intro">早餐很重要，不要错过哦</string>
    <string name="addmeal">加餐</string>
    <string name="addmeal_01">上午加餐</string>
    <string name="addmeal_02">下午加餐</string>
    <string name="lunch">午餐</string>
    <string name="supper">晚餐</string>
    <string name="dinner">正餐</string>

    <!--计划-->
    <string name="plan_diy">自定义计划</string>
    <string name="plan_status_muscle">增肌第</string>
    <string name="plan_status_fat">减脂第</string>
    <string name="plan_status_unit">天</string>
    <string name="plan_nutrition_rate">碳水化合物：蛋白质：脂类</string>
    <string name="plan_nutrition_rate_prefix_00">/</string>
    <string name="plan_nutrition_rate_prefix_01">g(</string>
    <string name="plan_nutrition_rate_prefix_02">%) : </string>
    <string name="plan_add">添加食材/食谱</string>
    <string name="calorie">热量</string>
    <string name="carbohydrate">碳水</string>
    <string name="protein">蛋白质</string>
    <string name="lipids">脂类</string>
    <string name="breakfast_title">早餐（含上午加餐）</string>
    <string name="lunch_title">午餐（含下午加餐）</string>
    <string name="dinner_title">晚餐（含夜宵）</string>

    <!--指南-->
    <string name="info">贴士</string>
    <string name="common">通用</string>
    <string name="muscle">增肌</string>
    <string name="fat">减脂</string>

    <!--评论-->
    <string name="comment">评论</string>
    <string name="comment_cancel">取消回复</string>
    <string name="comment_hint">请输入你的评论……</string>
    <string name="comment_user">长得好帅</string>
    <string name="comment_time">2014-08-20 22:21</string>
    <string name="comment_text">龙井虾仁，是配以龙井茶的嫩芽烹制而成的虾仁，是富有浙江杭州地方特色的汉族名菜。虾仁玉白，鲜嫩；芽叶碧绿，清香，色泽雅丽，滋味独特，食后清口开胃，回味无穷，在淮扬菜中堪称一绝。“龙井虾仁”选用活大河虾，配以清明节前后的龙井新茶烹制，虾仁肉白、鲜嫩龙井虾仁，茶叶碧绿、清香，色泽雅丽，滋味独特。</string>

    <!--菜篮子-->
    <string name="shopping">菜篮子</string>
    <string name="shopping_clear">清空</string>
    <string name="shopping_food">食材清单</string>
    <string name="shopping_recipe">食谱清单</string>

    <!--我的食记-->
    <string name="record_punch">我的打卡</string>
    <string name="record_work">我的食记</string>
    <string name="record_recipe">我的食谱</string>

    <!--我的收藏-->
    <string name="collect_recipe">食谱收藏</string>
    <string name="collect_theme">主题收藏</string>
    <string name="collect_knowledge">指南收藏</string>

    <!--登陆注册-->
    <string name="login">登陆</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="code">验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_disable">(60s)重新获取</string>
    <string name="login_wechat">微信登陆</string>
    <string name="login_sina">新浪登陆</string>
    <string name="login_qq">QQ登陆</string>
    <string name="register">注册</string>
    <string name="register_intro">没有账户？立即注册</string>
    <string name="login_intro">已有账户？直接登陆</string>

    <string name="theme">主题</string>
    <string name="follow">收藏</string>
    <string name="cancel_follow">取消收藏</string>

    <string name="category_chicken">鸡肉</string>

    <!--搜索-->
    <string name="search_hint">搜索食材、菜谱、标签</string>
    <string name="search">搜索</string>
    <string name="search_food">搜索食材/食谱</string>
    <string name="search_food_unit">克</string>
    <string name="search_recipe_unit">份</string>
    <string name="search_next">下一步</string>
    <string name="search_finish">完成</string>
    <string name="search_cancel">取消</string>
    <string name="search_pre">上一步</string>

    <string name="title_activity_recipe_video">RecipeVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="network_close">网络未连接</string>
    <string name="network_error">网络连接出错!</string>
    <string name="load_image_error">加载图片出错！</string>

    <!--设置-->
    <string name="me_record">我的食记</string>
    <string name="me_collect">我的收藏</string>
    <string name="me_report">我的报告</string>
    <string name="me_shopping_cart">菜篮子</string>
    <string name="me_login">退出登陆</string>

    <!--测试-->
    <string name="plan_test_name">评测</string>
    <string name="plan_test_last">上一题</string>
    <string name="plan_test_comment">使用计划前，先做一个简单的评测吧~这样能让我们的推荐更准确哦O(∩_∩)O</string>
    <string name="plan_test_start">开始评测</string>
    <string name="plan_test_question_01">1. 你的性别是？</string>
    <string name="plan_test_question_01_man">纯爷们</string>
    <string name="plan_test_question_01_woman">软妹纸</string>
    <string name="plan_test_question_02">2. 你的年龄？（周岁）</string>
    <string name="plan_test_question_02_unit">岁</string>
    <string name="plan_test_question_03">3. 你的身高？</string>
    <string name="plan_test_question_03_unit">cm</string>
    <string name="plan_test_question_04">4. 你的体重？</string>
    <string name="plan_test_question_04_unit">kg</string>
    <string name="plan_test_question_05">5. 你的体脂？</string>
    <string name="plan_test_question_05_tips">查看体脂示意图</string>
    <string name="plan_test_question_05_unit">%</string>
    <string name="plan_test_question_05_switch_01">没有精确数值</string>
    <string name="plan_test_question_05_switch_02">有精确数值</string>
    <string name="plan_test_question_05_01_man">小于12%</string>
    <string name="plan_test_question_05_02_man">12%~20%</string>
    <string name="plan_test_question_05_03_man">20%~30%</string>
    <string name="plan_test_question_05_04_man">30%以上</string>
    <string name="plan_test_question_05_01_woman">小于20%</string>
    <string name="plan_test_question_05_02_woman">20%~30%</string>
    <string name="plan_test_question_05_03_woman">30%~40%</string>
    <string name="plan_test_question_05_04_woman">40%以上</string>
    <string name="plan_test_question_06">6. 你所处职业的劳动强度？</string>
    <string name="plan_test_question_06_tips">查看劳动强度分级</string>
    <string name="plan_test_question_06_01">轻度劳动</string>
    <string name="plan_test_question_06_02">中度劳动</string>
    <string name="plan_test_question_06_03">重度劳动</string>
    <string name="plan_test_question_06_04">极重劳动</string>
    <string name="plan_test_question_07">7. 运动类型？</string>
    <string name="plan_test_question_07_01">增肌增重</string>
    <string name="plan_test_question_07_02">减脂减肥</string>
    <string name="plan_test_question_08">8. 一周运动几次？</string>
    <string name="plan_test_question_08_01">1&#8211;2次</string>
    <string name="plan_test_question_08_02">3&#8211;5次</string>
    <string name="plan_test_question_08_03">6&#8211;7次</string>
    <string name="plan_test_question_08_04">7次以上</string>
    <string name="plan_test_question_09">9. 每次运动的时长？</string>
    <string name="plan_test_question_09_01">小于30分钟</string>
    <string name="plan_test_question_09_02">30&#8211;60分钟</string>
    <string name="plan_test_question_09_03">60&#8211;90分钟</string>
    <string name="plan_test_question_09_04">90分钟以上</string>
    <string name="plan_test_question_10">10. 每天运动的时间段？</string>
    <string name="plan_test_question_10_01">早餐前</string>
    <string name="plan_test_question_10_02">午餐前</string>
    <string name="plan_test_question_10_03">晚餐前</string>
    <string name="plan_test_question_10_04">晚餐后</string>
    <string name="plan_test_question_11_01">11. 打算增肌增重至？</string>
    <string name="plan_test_question_11_02">11. 打算减脂减肥至？</string>
    <string name="plan_test_question_11_tips_gain_muscle">Tips：建议目标体重不要高于你身高对应的健康体重上限</string>
    <string name="plan_test_question_11_tips_lose_weight">Tips：建议目标体重不要低于你身高对应的健康体重下限</string>
    <string name="plan_test_question_12_01">12. 计划花多长时间？</string>
    <string name="plan_test_question_12_unit">天</string>
    <string name="plan_test_question_12_02">Tips：建议计划时长至少需要30天，再快可能会对身体有负面影响</string>
    <string name="title_activity_custom_view_test_activtiy">CustomViewTestActivtiy</string>
    <string name="plan_test_question_12_tips_prefix">Tips：建议计划时长至少需要</string>
    <string name="plan_test_question_12_tips_suffix">天，再快可能会对身体有负面影响</string>

    <!--测试-->
    <string name="report">我的报告</string>
    <string name="report_body_info">身体状况</string>
    <string name="report_base_info">基本报告</string>
    <string name="report_sport_info">热量及运动建议</string>
    <string name="report_nutrition_info">营养建议</string>
    <string name="report_base_info_bmi">BMI(身体质量指数)</string>
    <string name="report_base_info_bmr">BMR(基础代谢率)</string>
    <string name="report_base_info_intake">TDEE(每日热量总消耗)</string>
    <string name="report_base_info_burning">燃脂心率</string>
    <string name="report_base_info_best_weight">最佳体重</string>
    <string name="report_base_info_weight_range">健康体重范围</string>
    <string name="report_nutrition_info_rate">宏量营养供能比 ( 蛋白质：碳水化合物：脂类 )</string>
    <string name="report_nutrition_info_diet">膳食结构</string>
    <string name="report_nutrition_info_nutrition">营养元素</string>
    <string name="login_tip">请登录！</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_select_recipe">SelectRecipeActivity</string>
    <string name="title_activity_punch_photo_choice">PunchPhotoChoiceActivity</string>

    <!--计划-->
    <string name="title_activity_ingredient2">IngredientActivity2</string>
    <string name="recipe_plan">饮食计划</string>
    <string name="author_type">作者类型</string>
    <string name="author_nutrition">营养师</string>
    <string name="author_fit">健身达人</string>
    <string name="fit_type">适宜人群</string>
    <string name="fit_muscle">增肌</string>
    <string name="fit_fat">减脂</string>
    <string name="plan_type">计划类型</string>
    <string name="plan_food">食材</string>
    <string name="plan_recipe">食谱</string>
    <string name="title_activity_plan_nutrition">PlanNutritionActivity</string>

    <!--打卡-->
    <string name="punch_take_photo">拍照</string>
    <string name="punch_from_file">从相册选择</string>
    <string name="punch_use_default">使用默认图片</string>
    <string name="punch_title">打卡发布</string>
    <string name="punch_sure">发布</string>

    <string name="save">保存</string>
    <string name="saving_image">保存图片...</string>
    <string name="preparing_card">准备SD卡</string>
    <string name="no_storage_card">没有发现SD卡</string>
    <string name="not_enough_space">没有足够的空间</string>


    <string name="server_error">服务器错误</string>
    <string name="title_activity_select_switch_date">SelectSwitchDateActivity</string>

    <string name="today">从今天开始</string>
    <string name="tomorrow">从明天开始</string>
    <string name="title_activity_recipe_list">RecipeListActivity</string>

    <string name="recipe">食谱</string>
    <string name="title_activity_theme_list">ThemeListActivity</string>
    <string name="title_activity_ingredient_nutrition">IngredientNutritionActivity</string>
    <string name="title_activity_alarm">AlarmActivity</string>

</resources>
