<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp">

    <TextView
        android:id="@+id/option_takepic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/punch_take_photo"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/theme_line"/>

    <TextView
        android:id="@+id/option_select"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/punch_from_file"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/theme_line"/>

    <TextView
        android:id="@+id/option_default"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/punch_use_default"/>

</LinearLayout>