<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/base_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/filter"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/base_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_type"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/filter_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.rey.material.widget.CheckBox
                android:id="@+id/author_fit_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_fit"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:checked="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/author_nutrition_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_nutrition"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_type"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/filter_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.rey.material.widget.CheckBox
                android:id="@+id/fit_muscle_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_muscle"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:checked="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/fit_fat_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_fat"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_type"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/filter_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.rey.material.widget.CheckBox
                android:id="@+id/plan_food_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_food"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:checked="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/plan_recipe_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_recipe"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:checked="true" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/filter_sure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sure"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:clickable="true"
            android:background="@drawable/filter_sure_btn_border"/>
</LinearLayout>