<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/base_color">

        <ImageView
            android:id="@+id/close_menu_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/icon_filter_arrow"
            android:background="@drawable/icon_selector"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/filter"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/base_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purpose"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/filter_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.rey.material.widget.CheckBox
                android:id="@+id/muscle_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muscle"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:checked="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/fat_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/filter_line"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <com.rey.material.widget.CheckBox
                android:id="@+id/breakfast_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:checked="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/add_meal_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addmeal"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:checked="true" />

            <com.rey.material.widget.CheckBox
                android:id="@+id/dinner_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                app:cbd_strokeColor="#ffffff"
                app:cbd_tickColor="@color/base_color"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="15dp"
                android:checked="true" />



            </LinearLayout>




        </LinearLayout>




</LinearLayout>