<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/base_color"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/filter"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/theme_line"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background_color">

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muscle"
                android:textColor="@color/login_input_text_color"
                android:gravity="center_vertical"
                app:cbd_strokeColor="@color/base_color"
                app:cbd_tickColor="#ffffff"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:checked="true">

            </com.rey.material.widget.CheckBox>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/theme_line"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:textColor="@color/login_input_text_color"
                android:gravity="center_vertical"
                app:cbd_strokeColor="@color/base_color"
                app:cbd_tickColor="#ffffff"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:checked="true">

            </com.rey.material.widget.CheckBox>

            </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/theme_line"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/background_color">

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:textColor="@color/login_input_text_color"
                android:gravity="center_vertical"
                app:cbd_strokeColor="@color/base_color"
                app:cbd_tickColor="#ffffff"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:checked="true">

            </com.rey.material.widget.CheckBox>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@drawable/theme_line"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addmeal"
                android:textColor="@color/login_input_text_color"
                android:gravity="center_vertical"
                app:cbd_strokeColor="@color/base_color"
                app:cbd_tickColor="#ffffff"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:checked="true">

            </com.rey.material.widget.CheckBox><ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/theme_line"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:textColor="@color/login_input_text_color"
                android:gravity="center_vertical"
                app:cbd_strokeColor="@color/base_color"
                app:cbd_tickColor="#ffffff"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:checked="true">

            </com.rey.material.widget.CheckBox>

        </LinearLayout>


        </LinearLayout>




</LinearLayout>